# chi-hardware-manager

./: pyproject.toml
chi_hardware_manager/: fugaku.py
chi_hardware_manager/tests/unit/: test_fugaku.py
